# supercheckers-python

./: .gitignore  LICENSE  Pipfile  README.md  setup.cfg  setup.py  tasks.py
supercheckers/: __init__.py  __main__.py  __meta__.py  boards.py  enums.py  game.py  games.py  journals.py  moves.py  pieces.py  players.py  rules.py  utils.py  verifiers.py
tests/: test_enums.py  test_games.py  test_moves.py  test_utils.py  test_verifiers.py
