[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
known_third_party=click
known_first_party=supercheckers

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
ignore_missing_imports = true

[metadata]
license_file = LICENSE

[tool:pytest]
addopts = --no-cov-on-fail --cov-report=term-missing
